# docs/swagger.json
@@ -50,7 +50,38 @@
                 }
             }
         },
-        "/addressBook/list/{id}": {
+        "/addressBook/list/{userid}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "地址模块"
+                ],
+                "summary": "通过用户Id获取用户地址信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/reggie_go_api_v1.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/addressBook/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -65,7 +96,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "用户Id",
+                        "description": "Id",
                         "name": "id",
                         "in": "path",
                         "required": true
